tests-integration/fixtures/checking/142_derive_newtype_not_newtype/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Foo :: Int -> Foo

Types
Foo :: Type

Data
Foo
  Quantified = :0
  Kind = :0


Roles
Foo = []

Diagnostics
error[ExpectedNewtype]: Expected a newtype, got: Foo
  --> 7:1..7:33
  |
7 | derive newtype instance Show Foo
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
